# rvoip_sip_server

./: .gitignore  Cargo.toml  README.md  SUMMARY.md  config.toml  monitor.toml
scripts/: build.sh  install.sh  uninstall.sh
src/: call_handler.rs  config.rs  health_monitor.rs  logger.rs  main.rs  mp3_handler.rs  tone_generator.rs
systemd/: rvoip-health-monitor.service  rvoip-sip-server.service
